resolved appointment overlap issue

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -244,9 +244,9 @@ body{
 .rbc-day-slot .rbc-event {
   display: block !important;
   height: auto;
-  left: 0 !important;
+  /*left: 0 !important;*/
   position: absolute;
-  width: 100% !important;
+  /*width: 100% !important;*/
   z-index: inherit !important;
 }
 .pr5{padding-right: 5px;}
